[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bars/EmotionBar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bars/EmotionFill.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bars/LifeBar.png" type="Texture" id=4]
[ext_resource path="res://Assets/Bars/LifeFill.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Icons/Home.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/shop.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=9]
[ext_resource path="res://Assets/AnimationsRed/RedOpenEyes.png" type="Texture" id=10]
[ext_resource path="res://Assets/AnimationsRed/RedBreathing.png" type="Texture" id=11]
[ext_resource path="res://Assets/AnimationsRed/RedMiddleEyes.png" type="Texture" id=12]
[ext_resource path="res://Assets/AnimationsRed/RedCloseEyes.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.279694, 0.675586, 0.917969, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 6 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "Breathing",
"speed": 3.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "Still",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "Nothing",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 142.515, 144.183 )

[node name="Control" type="Node"]
script = ExtResource( 1 )

[node name="ContainerBars" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 165.0

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerBars"]
margin_right = 395.0
margin_bottom = 165.0

[node name="LifeBar" type="MarginContainer" parent="ContainerBars/VBoxContainer"]
margin_right = 395.0
margin_bottom = 120.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Bars" type="VBoxContainer" parent="ContainerBars/VBoxContainer/LifeBar"]
margin_left = 20.0
margin_top = 20.0
margin_right = 375.0
margin_bottom = 100.0
custom_constants/separation = 10

[node name="EmotionBar" type="HBoxContainer" parent="ContainerBars/VBoxContainer/LifeBar/Bars"]
margin_right = 355.0
margin_bottom = 35.0

[node name="TextureProgress" type="TextureProgress" parent="ContainerBars/VBoxContainer/LifeBar/Bars/EmotionBar"]
margin_right = 355.0
margin_bottom = 35.0
value = 80.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="LifeBar" type="HBoxContainer" parent="ContainerBars/VBoxContainer/LifeBar/Bars"]
margin_top = 45.0
margin_right = 355.0
margin_bottom = 80.0

[node name="TextureProgress" type="TextureProgress" parent="ContainerBars/VBoxContainer/LifeBar/Bars/LifeBar"]
margin_right = 355.0
margin_bottom = 35.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="ContainerHelp" type="HBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="ContainerHelp"]
margin_left = 318.0
margin_right = 400.0
margin_bottom = 88.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="Button" type="Button" parent="ContainerHelp/MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 62.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "?"
flat = true

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -98.0
margin_bottom = 2.0
custom_styles/panel = SubResource( 2 )

[node name="ContainerOptions" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 30
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/ContainerOptions"]
editor/display_folded = true
margin_left = 47.0
margin_right = 132.0
margin_bottom = 100.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="Button3" type="Button" parent="Panel/ContainerOptions/MarginContainer"]
margin_right = 85.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 7 )
flat = true

[node name="MarginContainer2" type="MarginContainer" parent="Panel/ContainerOptions"]
editor/display_folded = true
margin_left = 162.0
margin_right = 247.0
margin_bottom = 100.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="Home" type="Button" parent="Panel/ContainerOptions/MarginContainer2"]
margin_right = 85.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 7 )
flat = true

[node name="MarginContainer3" type="MarginContainer" parent="Panel/ContainerOptions"]
editor/display_folded = true
margin_left = 277.0
margin_right = 352.0
margin_bottom = 100.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="Button3" type="Button" parent="Panel/ContainerOptions/MarginContainer3"]
margin_right = 75.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 3 )
icon = ExtResource( 8 )
flat = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -120.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="Button" type="Button" parent="MarginContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 940.0
margin_bottom = 110.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="MarginContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = " TextDialogue TextDialogue TextDialogue Text
Dialogue TextDialogue TextDialogue TextDialogue TextDialogue Text"
align = 1
valign = 1
autowrap = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -108.0
margin_bottom = -8.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
margin_left = 20.0
margin_top = 10.0
margin_right = 940.0
margin_bottom = 90.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_right = 378.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Opcion 1"

[node name="Button2" type="Button" parent="MarginContainer2/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 80.0
size_flags_horizontal = 3
text = "Opcion 2"

[node name="Monster" type="Area2D" parent="."]
position = Vector2( 503.085, 270.718 )
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite_player" type="AnimatedSprite" parent="Monster"]
frames = SubResource( 5 )
animation = "Nothing"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monster"]
shape = SubResource( 6 )

[node name="AnimationMonster" type="Timer" parent="."]
wait_time = 2.0

[node name="LifeMonsterTimer" type="Timer" parent="."]
[connection signal="pressed" from="Panel/ContainerOptions/MarginContainer2/Home" to="." method="_on_Home_pressed"]
[connection signal="input_event" from="Monster" to="Monster" method="_on_Area2D_input_event"]
[connection signal="timeout" from="AnimationMonster" to="." method="_on_AnimationMonster_timeout"]
[connection signal="timeout" from="LifeMonsterTimer" to="." method="_on_LifeMonsterTimer_timeout"]
